--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,6 @@
                   </label>
                 </fieldset>
               </div>
-
               <div class="tickets__amount amount">
                 <h3 class="amount__title">Amount</h3>
                 <h4 class="amount__subtitle">Basic 18+</h4>
@@ -434,7 +433,6 @@
                 <span class="amount__price">Total €<span>0</span></span>
                 <a href="#popup1" class="popup-link amount__btn btn">Buy Now</a>
               </div>
-
             </form>
           </div>
         </div>
@@ -610,31 +608,30 @@
                         <option value="Combined Admission" class="option">Combined Admission</option>
                       </select>
                     </label>
-                    <div class="form-booking__steppers">
-                      <h5 class="form-booking__title">Entry ticket</h5>
-                      <div class="header-block__line"></div>
-                      <fieldset class="stappers-booking">
-                        <div class="stappers-booking__basic">
-                          <div class="stappers-booking__subtitle">Basic 18+ (20 €)</div>
-                          <div class="stappers-booking__stepper stapper">
-                            <button type="button" class="stapper__button">–</button>
-                            <input type="number" min="0" max="20" value="0" readonly
-                              class="stapper__number stapper__number--basic">
-                            <button type="button" class="stapper__button">+</button>
-                          </div>
-                        </div>
-                        <div class="stappers-booking__senior">
-                          <div class="stappers-booking__subtitle">Senior 65+ (10 €)</div>
-                          <div class="stappers-booking__stepper stapper">
-                            <button type="button" class="stapper__button">–</button>
-                            <input type="number" min="0" max="20" value="0" readonly
-                              class="stapper__number stapper__number--senior">
-                            <button type="button" class="stapper__button">+</button>
-                          </div>
-                        </div>
-                      </fieldset>
-                    </div>
                   </form>
+                  <div class="form-booking__steppers">
+                    <h5 class="form-booking__title">Entry ticket</h5>
+                    <div class="header-block__line"></div>
+                    <div class="stappers-booking">
+                      <div class="stappers-booking__basic">
+                        <div class="stappers-booking__subtitle">Basic 18+ (20 €)</div>
+                        <div class="stappers-booking__stepper stapper">
+                          <button type="button" class="stapper__button">–</button>
+                          <div class="stapper__number stapper__number--basic">1</div>
+                          <button type="button" class="stapper__button">+</button>
+                        </div>
+                      </div>
+                      <div class="stappers-booking__senior">
+                        <div class="stappers-booking__subtitle">Senior 65+ (10 €)</div>
+                        <div class="stappers-booking__stepper stapper">
+                          <button type="button" class="stapper__button">–</button>
+                          <div class="stapper__number stapper__number--senior">1</div>
+                          <button type="button" class="stapper__button">+</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
 
                 <div class="booking__overwiev overwiev">
